# yfinance-mcp

./: .gitignore  CHANGELOG.md  COMO_COMECAR.md  INTEGRATION_VERIFICATION.md  PARALLEL_DEVELOPMENT_PLAN.md  PR_SUMMARY.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  README_SPEC_PT.md  SESSION_START_GUIDE.md  pyproject.toml  requirements.txt  test_diagnosis.py  test_enum_logic.py  test_enum_schema.py  test_enum_simple.py  test_final.py  test_fix.py  test_p0_fixes.py  test_real_errors.py  test_service.py  test_session2.py
src/mcp_yfinance/: __init__.py  __main__.py  cache.py  config.py  exceptions.py  models.py  server.py  service.py  utils.py
tests/: test_integration.py  test_service.py
